convert-to : display error messages in console fdo#88326

- source file does not exist
- requested export filter does not exist and we use default filter (still process though)

Change-Id: I92031ea305e81927357acfc352dbe5a5da205b0d
(cherry picked from commit de900ebdd4fec0fb06d56583ae22b2adc3608a65)
Reviewed-on: https://gerrit.libreoffice.org/14041
Tested-by: Michael Stahl <mstahl@redhat.com>
Reviewed-by: Michael Stahl <mstahl@redhat.com>